Fixes and QOL changes
